--- a/full-stack.html
+++ b/full-stack.html
@@ -38,6 +38,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://generali-global-health-services.workable.com/j/7795D9A8B4'>Generali Global Health Services - Jobs: Senior Developer, Full Stack (18-month contract) - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/sevenrooms/jobs/4007101002'>Job Application for Fullstack Software Engineer at SevenRooms</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
@@ -58,7 +62,7 @@
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999692406163-full-stack-software-engineer'>4Catalyzer Full-Stack Software Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999692406163-full-stack-software-engineer'>4Catalyzer Full-Stack Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -82,7 +86,7 @@
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/thirtymadison/jobs/4225931002'>Job Application for Full Stack Engineer at Thirty Madison</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/thirtymadison/jobs/4225931002'>Job Application for Full Stack Engineer at Thirty Madison</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -138,7 +142,7 @@
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://linways.freshteam.com/jobs/AZ8boWbnR68v/software-development-engineer-2-sde-2-full-stack'>Software Development Engineer-2 (SDE-2) [Full Stack]</a></h5> 
+<h5><a href='https://linways.freshteam.com/jobs/AZ8boWbnR68v/software-development-engineer-2-sde-2-full-stack'>Software Development Engineer-2 (SDE-2) [Full Stack]</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Software Development Engineer-2 (SDE-2) [Full Stack]. Kochi, Kerala | Full time. 
 Apply Now. What you will do: Be a part of our development team and actively?...</p>
@@ -191,7 +195,7 @@ intelligence?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999692139754-senior-full-stack-engineer'>4Catalyzer Senior Full Stack Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999692139754-senior-full-stack-engineer'>4Catalyzer Senior Full Stack Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -207,7 +211,7 @@ intelligence?...</p>
 <p><span class="badge badge-light">New York New York</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/matternet/4f2a02d4-cc95-4ee0-ae1a-2238050c925f'>Matternet - Full Stack Cloud Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/matternet/4f2a02d4-cc95-4ee0-ae1a-2238050c925f'>Matternet - Full Stack Cloud Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -262,7 +266,7 @@ Platform?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://pod-point.workable.com/j/EFDF12E5CD'>Pod Point Ltd - Jobs: Full Stack (PHP/JS) Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pod-point.workable.com/j/EFDF12E5CD'>Pod Point Ltd - Jobs: Full Stack (PHP/JS) Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -353,7 +357,7 @@ business?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rochester-talent.freshteam.com/jobs/CS4Lv_PJjX-r/full-stack-developer'>full stack developer</a></h5> 
+<h5><a href='https://rochester-talent.freshteam.com/jobs/CS4Lv_PJjX-r/full-stack-developer'>full stack developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... FULL STACK DEVELOPER. Ch?a, Cundinamarca | Full time. Apply Now. 
 Rochester School is a private school focused on environmental sustainability and
@@ -434,7 +438,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light">San Diego, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://definedcrowd.recruitee.com/o/automation-and-tooling-engineer-full-stack'>
+<h5><a href='https://definedcrowd.recruitee.com/o/automation-and-tooling-engineer-full-stack'>
       Automation and Tooling Engineer (Full Stack) - DefinedCrowd
     </a></h5> 
 <p><span class="badge badge-light">Porto, Portugal</span></p>
@@ -458,12 +462,8 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light">Cologne, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://relocately.join.com/jobs/264223-full-stack-developer-w-m-x'>Job @ Relocately (Berlin): Full Stack Developer (w... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://relocately.join.com/jobs/264223-full-stack-developer-w-m-x'>Job @ Relocately (Berlin): Full Stack Developer (w... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
-<p>Posted on: 2019-04-05</p>
-<hr/>
-<h5><a href='https://tma-germany.join.com/jobs/257841-full-stack-developer-m-w-d'>Job @ TMA Germany jungl?ck ? (Munich): Full Stack ... | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
 
